--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Santo Cabron Corporation is an international conglomerate for business and the support of philantropic efforts ",
   "main": "index.js",
   "scripts": {
-    "test": "echo 'tested'"
+    "test": "echo 'tested'",
+    "build": "./node_modules/gloriajs/bin/gloria build"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/santocabron/santocabron.github.io/issues"
   },
-  "homepage": "https://github.com/santocabron/santocabron.github.io#readme"
+  "homepage": "https://github.com/santocabron/santocabron.github.io#readme",
+  "dependencies": {
+    "gloriajs": "^2.2.0"
+  }
 }
