--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn install --ignore-optional
 
       - name: Build 🔧 # Creates the build folder to deploy
-        run: yarn build
+        run: yarn css:tailwind
 
       - name: Copy 🔧 # Copies public folder to dest
         run: yarn copy
