--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo 'tested'",
     "copy": "./node_modules/gloriajs/bin/gloria copy",
+    "css:tailwind": "./node_modules/gloriajs/bin/gloria css:tailwind",
     "build": "./node_modules/gloriajs/bin/gloria build"
   },
   "repository": {
