--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -1,8 +1,10 @@
 name: Build and Deploy
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request:
+    branches: [main]
+
 permissions:
   contents: write
   pages: write
@@ -10,32 +12,33 @@ permissions:
 
 jobs:
   build-and-deploy:
-    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
+    concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up node
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 20
+          cache: 'yarn'
 
-      - name: Install
-        run: yarn install --ignore-optional
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
-      - name: Build 🔧 # Creates the build folder to deploy
+      - name: Build site 🔧
         run: yarn css:tailwind
 
-      - name: Copy 🔧 # Copies public folder to dest
+      - name: Copy assets 🔧
         run: yarn copy
 
-      - name: Upload Artifact
-        uses: actions/upload-pages-artifact@v1
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: ./build # The folder the action should deploy.
-          name: github-pages
+          path: ./build
           retention-days: 1
 
-      - name:  Deploy  🚀
-        uses: actions/deploy-pages@v1
+      - name: Deploy to GitHub Pages 🚀
+        uses: actions/deploy-pages@v4
